--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,6 @@ before_script:
 script:
   - pytest --cov tests/
 after_script:
-  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
+  # - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
+  - coverage xml
+  - ./cc-test-reporter after-build --coverage-input-type coverage.py --id 077cae2402e1a014de859a6a80bc7687901a8403c108835dd6033941eacc8180 --exit-code $TRAVIS_TEST_RESULT
